--- a/src/assets/styles/components/_footer.scss
+++ b/src/assets/styles/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  backface-visibility: hidden;
   background-color: var(--color-primary);
   min-height: 4rem;
   padding: 4rem;
