--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -1,4 +1,5 @@
 .hero {
+  backface-visibility: hidden;
   background-color: var(--color-bg-light);
 
   &__social-links {
