--- a/src/assets/styles/components/_projects.scss
+++ b/src/assets/styles/components/_projects.scss
@@ -1,4 +1,5 @@
 .projects {
+  backface-visibility: hidden;
   background-color: var(--color-grey-lightest);
 
   &__grid {
